Added Github link

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	Currently pursuing a master's in Aerospace Engineering at the University of Washington, Seattle. This page will rapidly evolve as I embark on the journey of self-taught web development. Feel free to check in every couple weeks to see how I'm progressing!
 </p>
 <p>
-	In the meantime, feel free to check out my other pages: <a href="https://twitter.com/tarikhajk">Twitter</a> <a href="https://www.Linkedin.com/in/tarikhajk">LinkedIn</a>
+	In the meantime, feel free to check out my other pages: <a href="https://twitter.com/tarikhajk">Twitter</a> <a href="https://www.Linkedin.com/in/tarikhajk">LinkedIn</a> <a href="https://github.com/tarikhajk">Github</a>
 </p>
 <p>
 	My resume will be just as dynamic as this website as I pivot into the tech industry. You can view it <a href="Haj-Khalil_Resume.pdf">here</a>!
