Website v.2 constructed (CSS only)

--- a/index.html
+++ b/index.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Welcome!</title>
+	<title>Tarik Haj-Khalil</title>
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<h1>Welcome to my Portfolio!</h1>
-<img src="https://media.licdn.com/dms/image/C5603AQGDwj3P3bM7dA/profile-displayphoto-shrink_200_200/0?e=1544054400&v=beta&t=WwFRRWH-tcMMfPtC9gYRmr-yiM8KkIkd3pCxrai6TNE">
-<h3>Rocket Scientist with a Passion for Tech</h3>
-<p>
-	Currently pursuing a master's in Aerospace Engineering at the University of Washington, Seattle. This page will rapidly evolve as I embark on the journey of self-taught web development. Feel free to check in every couple weeks to see how I'm progressing!
-</p>
-<p>
-	In the meantime, feel free to check out my other pages: <a href="https://twitter.com/tarikhajk">Twitter</a> <a href="https://www.Linkedin.com/in/tarikhajk">LinkedIn</a> <a href="https://github.com/tarikhajk">Github</a>
-</p>
-<p>
-	My resume will be just as dynamic as this website as I pivot into the tech industry. You can view it <a href="Haj-Khalil_Resume.pdf">here</a>!
-</p>
+
+<h1>#tARIK</h1>
+
+<div>
+	<table>
+		<tr>
+			<td>
+				<img src="https://media.licdn.com/dms/image/C5603AQGDwj3P3bM7dA/profile-displayphoto-shrink_200_200/0?e=1544054400&v=beta&t=WwFRRWH-tcMMfPtC9gYRmr-yiM8KkIkd3pCxrai6TNE">
+			</td>
+			<td>
+				Rocket Scientist with a Passion for Tech
+			</td>
+		</tr>
+	</table>
+</div>
+<div id="paragraph">
+	<p>
+		Currently pursuing a master's in Aerospace Engineering at the University of Washington, Seattle. This page will rapidly evolve as I embark on the journey of self-taught web development. Feel free to check in every couple weeks to see how I'm progressing!
+	</p>
+	<p>
+		In the meantime, feel free to connect with me and check out my other pages which are linked at the bottom.
+	</p>
+	<p>
+		My resume will be just as dynamic as this website as I pivot into the tech industry. You can view it <a href="https://drive.google.com/file/d/1OmwkIlM27UIVdeabisSDNy-YBgZX86b1/view?usp=sharing" rel="noopener noreferrer" target="_blank">here</a>!
+	</p>
+</div>
+
+<hr>
+
+<div id = "links">
+	<a href="https://twitter.com/tarikhajk" rel="noopener noreferrer" target="_blank"><img src="twitter.png"></a> 
+	<a href="https://www.Linkedin.com/in/tarikhajk" rel="noopener noreferrer" target="_blank"><img src="linkedin.png"></a> 
+	<a href="https://github.com/tarikhajk" rel="noopener noreferrer" target="_blank"><img src="github.png"></a>
+</div>
+
 </body>
 </html>
