Reorganized files into folders and edited paths in HTML doc

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Tarik Haj-Khalil</title>
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 
@@ -36,9 +36,9 @@
 <hr>
 
 <div id = "links">
-	<a href="https://twitter.com/tarikhajk" rel="noopener noreferrer" target="_blank"><img src="twitter.png"></a> 
-	<a href="https://www.Linkedin.com/in/tarikhajk" rel="noopener noreferrer" target="_blank"><img src="linkedin.png"></a> 
-	<a href="https://github.com/tarikhajk" rel="noopener noreferrer" target="_blank"><img src="github.png"></a>
+	<a href="https://twitter.com/tarikhajk" rel="noopener noreferrer" target="_blank"><img src="img/twitter.png"></a> 
+	<a href="https://www.Linkedin.com/in/tarikhajk" rel="noopener noreferrer" target="_blank"><img src="img/linkedin.png"></a> 
+	<a href="https://github.com/tarikhajk" rel="noopener noreferrer" target="_blank"><img src="img/github.png"></a>
 </div>
 
 </body>
