--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
   </head>
   <body>
-    <h1>#tARIK</h1>
+    <h1 class="d-none d-md-block mb-0">#tARIK</h1>
 
     <div>
       <table>
         <tr>
-          <td><img class="p-0 img-thumbnail" id="photo" src="img/cropped.jpg" /></td>
+          <td>
+            <img class="p-0 img-thumbnail d-none d-sm-block" id="photo" src="img/cropped.jpg" />
+          </td>
           <td>Rocket Scientist with a Passion for Tech</td>
         </tr>
       </table>
@@ -56,7 +58,7 @@
       </p>
     </div>
 
-    <hr class="mb-0">
+    <hr class="mb-0" />
 
     <div id="links">
       <a
