--- a/index.html
+++ b/index.html
@@ -1,101 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Tarik Haj-Khalil</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700"
-      rel="stylesheet"
-    />
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135015068-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-  </head>
-  <body>
-    <h1 class="d-none d-md-block mb-0">#tARIK</h1>
+    gtag('config', 'UA-135015068-1');
+  </script>
 
-    <div>
-      <table>
-        <tr>
-          <td>
-            <img class="p-0 img-thumbnail d-none d-sm-block" id="photo" src="img/cropped.jpg" />
-          </td>
-          <td>Rocket Scientist with a Passion for Tech</td>
-        </tr>
-      </table>
-    </div>
-    <div id="paragraph">
-      <p>
-        Currently pursuing a master's in Aerospace Engineering at the University
-        of Washington, Seattle. This page will rapidly evolve as I embark on the
-        journey of self-taught web development. Feel free to check in every
-        couple weeks to see how I'm progressing!
-      </p>
-      <p>
-        In the meantime, feel free to connect with me and check out my other
-        pages which are linked at the bottom.
-      </p>
-      <p>
-        My resume will be just as dynamic as this website as I pivot into the
-        tech industry. You can view it
-        <a
-          href="https://drive.google.com/file/d/1t_mA1EdO6YE9QRaDmgHtXFnKO9yx4YiW/view?usp=sharing"
-          rel="noopener noreferrer"
-          target="_blank"
-          >here</a
-        >!
-      </p>
-    </div>
+  <title>Tarik Haj-Khalil</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta
+  name="viewport"
+  content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+  <link
+  href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700"
+  rel="stylesheet"
+  />
 
-    <hr class="mb-0" />
+  <!-- Bootstrap CSS -->
+  <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+  crossorigin="anonymous"
+  />
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
+</head>
+<body>
+  <h1 class="d-none d-md-block mb-0">#tARIK</h1>
 
-    <div id="links">
+  <div>
+    <table>
+      <tr>
+        <td>
+          <img class="p-0 img-thumbnail d-none d-sm-block" id="photo" src="img/cropped.jpg" />
+        </td>
+        <td>Rocket Scientist with a Passion for Tech</td>
+      </tr>
+    </table>
+  </div>
+  <div id="paragraph">
+    <p>
+      Currently pursuing a master's in Aerospace Engineering at the University
+      of Washington, Seattle. This page will rapidly evolve as I embark on the
+      journey of self-taught web development. Feel free to check in every
+      couple weeks to see how I'm progressing!
+    </p>
+    <p>
+      In the meantime, feel free to connect with me and check out my other
+      pages which are linked at the bottom.
+    </p>
+    <p>
+      My resume will be just as dynamic as this website as I pivot into the
+      tech industry. You can view it
       <a
-        href="https://twitter.com/tarikhajk"
-        rel="noopener noreferrer"
-        target="_blank"
-        ><img src="img/twitter.png"
-      /></a>
-      <a
-        href="https://www.Linkedin.com/in/tarikhajk"
-        rel="noopener noreferrer"
-        target="_blank"
-        ><img src="img/linkedin.png"
-      /></a>
-      <a
-        href="https://github.com/tarikhajk"
-        rel="noopener noreferrer"
-        target="_blank"
-        ><img src="img/github.png"
-      /></a>
-    </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      href="https://drive.google.com/file/d/1t_mA1EdO6YE9QRaDmgHtXFnKO9yx4YiW/view?usp=sharing"
+      rel="noopener noreferrer"
+      target="_blank"
+      >here</a
+      >!
+    </p>
+  </div>
+
+  <hr class="mb-0" />
+
+  <div id="links">
+    <a
+    href="https://twitter.com/tarikhajk"
+    rel="noopener noreferrer"
+    target="_blank"
+    ><img src="img/twitter.png"
+    /></a>
+    <a
+    href="https://www.Linkedin.com/in/tarikhajk"
+    rel="noopener noreferrer"
+    target="_blank"
+    ><img src="img/linkedin.png"
+    /></a>
+    <a
+    href="https://github.com/tarikhajk"
+    rel="noopener noreferrer"
+    target="_blank"
+    ><img src="img/github.png"
+    /></a>
+  </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"
+  ></script>
+  <script
+  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"
+  ></script>
+  <script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous"
+  ></script>
+</body>
 </html>
